Using static empty arrays